tests/type-reconstruction/ill-typed/references/references-1.stella
language core;

extend with #references, #type-reconstruction;

fn chck(b : auto) -> auto {
  return (if true then false else true)
}

fn main(b : auto) -> Nat {
  return chck(<0xABCDEF>)
}
